--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ urls = { "Homepage" = "https://github.com/JHGFD82/RoManTools", "Documentation" =
 dependencies = [ "numpy>=1.19.2" ]
 
 [project.scripts]
-romantools = "RoManTools.main:main"
+RoManTools = "RoManTools.main:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
