--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "RoManTools"
-description = "A toolkit for processing and converting Romanized Mandarin text."
+description = "Tools for processing and converting Romanized Mandarin text"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "GPL-3.0 license"}
