--- a/.github/workflows/python-test-artifact.yml
+++ b/.github/workflows/python-test-artifact.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest numpy
+          pip install -r requirements.txt
       - name: Test with pytest
-        run: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+        run: PYTHONPATH=$(pwd) pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v3
         with:
