--- a/.github/workflows/python-test-artifact.yml
+++ b/.github/workflows/python-test-artifact.yml
@@ -18,16 +18,24 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       # Install pip and pytest
-      - name: Install dependencies
+      - name: Install dependencies # pytest-cov is installed for CodeCov integration
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Test with pytest
-        run: PYTHONPATH=$(pwd) pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+          pip install pytest pytest-cov
+      - name: Test with pytest # CodeCov integration with pytest --cov-branch
+        run: |
+          PYTHONPATH=$(pwd) pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+          pytest --cov-branch --cov-report=xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
           name: pytest-results-${{ matrix.python-version }}
           path: junit/test-results-${{ matrix.python-version }}.xml
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: JHGFD82/RoManTools
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
