--- a/.github/workflows/python-test-artifact.yml
+++ b/.github/workflows/python-test-artifact.yml
@@ -23,15 +23,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-cov
-      - name: Test with pytest # CodeCov integration with pytest --cov-branch
-        run: |
-          PYTHONPATH=$(pwd) pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
-          pytest --cov-branch --cov-report=xml
+      - name: Test with pytest
+        run: PYTHONPATH=$(pwd) pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
           name: pytest-results-${{ matrix.python-version }}
           path: junit/test-results-${{ matrix.python-version }}.xml
+      - name: Test for CodeCov # CodeCov integration with pytest --cov-branch
+        run: pytest --cov-branch --cov-report=xml
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
