--- a/.github/workflows/python-test-artifact.yml
+++ b/.github/workflows/python-test-artifact.yml
@@ -31,7 +31,9 @@ jobs:
           name: pytest-results-${{ matrix.python-version }}
           path: junit/test-results-${{ matrix.python-version }}.xml
       - name: Test for CodeCov # CodeCov integration with pytest --cov-branch
-        run: PYTHONPATH=$(pwd) pytest --cov-branch --cov-report=xml:../coverage.xml
+        run: |
+          PYTHONPATH=$(pwd) pytest --cov-branch --cov-report=xml:$(pwd)/coverage.xml
+          ls -alrt
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
