--- a/.github/workflows/python-test-artifact.yml
+++ b/.github/workflows/python-test-artifact.yml
@@ -32,8 +32,7 @@ jobs:
           path: junit/test-results-${{ matrix.python-version }}.xml
       - name: Test for CodeCov # CodeCov integration with pytest --cov-branch
         run: |
-          PYTHONPATH=$(pwd) pytest --cov-branch --cov-report=xml:$(pwd)/coverage.xml
-          ls -alrt
+          PYTHONPATH=$(pwd) pytest --cov=tests/ --cov-branch --cov-report=xml
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
