--- a/.github/workflows/python-test-artifact.yml
+++ b/.github/workflows/python-test-artifact.yml
@@ -5,7 +5,6 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -13,12 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Python # Set Python version
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      # Install pip and pytest
-      - name: Install dependencies # pytest-cov is installed for CodeCov integration
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -30,7 +28,22 @@ jobs:
         with:
           name: pytest-results-${{ matrix.python-version }}
           path: junit/test-results-${{ matrix.python-version }}.xml
-      - name: Test for CodeCov # CodeCov integration with pytest --cov-branch
+
+  codecov:
+    needs: build  # Ensure tests are completed before running
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Python (Latest)
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.13"  # Specify one version for Codecov
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
+      - name: Test for CodeCov
         run: |
           PYTHONPATH=$(pwd) pytest --cov=tests/ --cov-branch --cov-report=xml
       - name: Upload coverage reports to Codecov
@@ -38,5 +51,3 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: JHGFD82/RoManTools
-        # Use always() to always run this step to publish test results when there are test failures
-        if: ${{ always() }}
